can now check health and claims of a user
